horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
 
 .aboutUsContainer {
   text-align: center;
-  width: 80vw;
+  width: 100vw;
   padding-top: 10vh;
   /* overflow-y: scroll; */
   /* overflow-x: hidden; */
@@ -324,6 +324,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
   height: fit-content;
   padding: 2vw;
   margin-bottom: 20px;
+  overflow-x: hidden;
 }
 
 
@@ -386,6 +387,7 @@ body, p, h1, h2, h3, h4, h5, h6 {
   margin-left: 10vw;
   /* overflow-y: scroll; */
   text-align: center;
+  overflow-x: hidden;
 }
 
 .pdf_container {
@@ -415,7 +417,8 @@ body, p, h1, h2, h3, h4, h5, h6 {
   height: fit-content;
   padding: 2vw;
   margin-bottom: 20px;
-  
+
+  overflow-x: hidden;
   
 }
 
@@ -452,8 +455,10 @@ body, p, h1, h2, h3, h4, h5, h6 {
   margin-top: 5vh;
   padding-bottom: 10vh;
   /* overflow-y: scroll; */
-  height: 85vh;
-  padding-bottom: 10vh;
+  align-items: center;
+  height: fit-content;
+
+  overflow-x: hidden;
 }
 
 .events_container {
